artifacthub/library/pod-security-policy/volumes/1.1.0/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8spspvolumetypes
  annotations:
    metadata.gatekeeper.sh/title: "Volume Types"
    metadata.gatekeeper.sh/version: 1.1.0
    description: >-
      Restricts mountable volume types to those specified by the user.
      Corresponds to the `volumes` field in a PodSecurityPolicy. For more
      information, see
      https://kubernetes.io/docs/concepts/policy/pod-security-policy/#volumes-and-file-systems
spec:
  crd:
    spec:
      names:
        kind: K8sPSPVolumeTypes
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          description: >-
            Restricts mountable volume types to those specified by the user.
            Corresponds to the `volumes` field in a PodSecurityPolicy. For more
            information, see
            https://kubernetes.io/docs/concepts/policy/pod-security-policy/#volumes-and-file-systems
          properties:
            volumes:
              description: "`volumes` is an array of volume types. All volume types can be enabled using `*`."
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
      - engine: K8sNativeValidation
        source:
          variables:
          - name: volumes
            expression: 'has(object.spec.volumes) && has(request.operation) && request.operation != "UPDATE" ? object.spec.volumes : []'
          - name: badVolumes
            expression: |
              variables.params.volumes.exists(entry, entry == "*") ? [] : variables.volumes.map(e, e.map(k, k != "name", k)).map(k, k[0]).filter(entry, !(entry in variables.params.volumes))
          validations:
          - expression: 'size(variables.badVolumes) == 0'
            messageExpression: '"The volume type " + variables.badVolumes.join(", ") + " is not allowed, pod: " + object.metadata.name + ". Allowed volume types: " + variables.params.volumes.join(", ")'
      - engine: Rego
        source:
          rego: |
            package k8spspvolumetypes

            import data.lib.exclude_update.is_update

            violation[{"msg": msg, "details": {}}] {
                # spec.volumes field is immutable.
                not is_update(input.review)

                volume_fields := {x | input.review.object.spec.volumes[_][x]; x != "name"}
                field := volume_fields[_]
                not input_volume_type_allowed(field)
                msg := sprintf("The volume type %v is not allowed, pod: %v. Allowed volume types: %v", [field, input.review.object.metadata.name, input.parameters.volumes])
            }

            # * may be used to allow all volume types
            input_volume_type_allowed(_) {
                input.parameters.volumes[_] == "*"
            }

            input_volume_type_allowed(field) {
                field == input.parameters.volumes[_]
            }
          libs:
            - |
              package lib.exclude_update

              is_update(review) {
                  review.operation == "UPDATE"
              }
